fix sidebar flash on load; fix index cards image taking too much space on small viewports; fix sidebar height on mobile

--- a/src/styles/cardComponent.module.css
+++ b/src/styles/cardComponent.module.css
@@ -1,5 +1,5 @@
 .container{
-    height: 32vh;
+    height: fit-content;
     width: 80vw;
     margin: 20px auto;
     border: 2px solid;
